# Pong-Game

./: .gitignore  CMakeLists.txt  Directory.Build.props  FP.sln  PreLoad.cmake  README.MD
ClassDiagrams/: pong_class_diagram_V1.0.0.uxf  pong_class_diagram_V1.0.1.uxf
FP/: AssetManager.cpp  AssetManager.h  Ball.cpp  Ball.h  CollisionDetection.cpp  CollisionDetection.h  FP.vcxproj  FP.vcxproj.filters  Game.cpp  Game.h  GameObjects.cpp  GameObjects.h  Label.cpp  Label.h  Platform.cpp  Platform.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  Shapes.h  TextureManager.cpp  TextureManager.h  Timer.cpp  Timer.h  main.cpp
